@@ -8,7 +8,7 @@
  *                                    | |
  *                                    |_|
  *            PlotSquared plot management system for Minecraft
- *                  Copyright (C) 2021 IntellectualSites
+ *               Copyright (C) 2014 - 2022 IntellectualSites
  *
  *     This program is free software: you can redistribute it and/or modify
  *     it under the terms of the GNU General Public License as published by
@@ -21,14 +21,15 @@
  *     GNU General Public License for more details.
  *
  *     You should have received a copy of the GNU General Public License
- *     along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 package com.plotsquared.core.configuration;
 
-import com.plotsquared.core.PlotSquared;
 import com.plotsquared.core.configuration.Settings.Enabled_Components;
 import com.plotsquared.core.configuration.file.YamlConfiguration;
 import com.plotsquared.core.util.StringMan;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.io.File;
 import java.io.PrintWriter;
@@ -46,15 +47,18 @@ import java.util.Map;
 
 public class Config {
 
+    private static final Logger LOGGER = LogManager.getLogger("PlotSquared/" + Config.class.getSimpleName());
+
     /**
      * Get the value for a node<br>
      * Probably throws some error if you try to get a non existent key
      *
-     * @param key
-     * @param root
-     * @param <T>
-     * @return
+     * @param key  configuration key
+     * @param root configuration class
+     * @param <T>  value type
+     * @return value
      */
+    @SuppressWarnings("unchecked")
     public static <T> T get(String key, Class<?> root) {
         String[] split = key.split("\\.");
         Object instance = getInstance(split, root);
@@ -68,7 +72,6 @@ public class Config {
                 }
             }
         }
-        PlotSquared.debug("Failed to get config option: " + key);
         return null;
     }
 
@@ -78,7 +81,7 @@ public class Config {
      *
      * @param key   config node
      * @param value value
-     * @param root
+     * @param root  configuration class
      */
     public static void set(String key, Object value, Class<? extends Config> root) {
         String[] split = key.split("\\.");
@@ -95,15 +98,13 @@ public class Config {
                     }
                     field.set(instance, value);
                     return;
-                } catch (Throwable e) {
-                    PlotSquared.debug(
-                        "Invalid configuration value: " + key + ": " + value + " in " + root
-                            .getSimpleName());
+                } catch (final Throwable e) {
+                    LOGGER.error("Invalid configuration value '{}: {}' in {}", key, value, root.getSimpleName());
                     e.printStackTrace();
                 }
             }
         }
-        PlotSquared.debug("Failed to set config option: " + key + ": " + value + " | " + instance);
+        LOGGER.error("Failed to set config option '{}: {}' | {}", key, value, instance);
     }
 
     public static boolean load(File file, Class<? extends Config> root) {
@@ -124,8 +125,8 @@ public class Config {
     /**
      * Set all values in the file (load first to avoid overwriting)
      *
-     * @param file
-     * @param root
+     * @param file file
+     * @param root configuration file class
      */
     public static void save(File file, Class<? extends Config> root) {
         try {
@@ -134,7 +135,7 @@ public class Config {
                 file.createNewFile();
             }
             try (PrintWriter writer = new PrintWriter(file)) {
-                Object instance = root.newInstance();
+                Object instance = root.getDeclaredConstructor().newInstance();
                 save(writer, root, instance, 0);
             }
         } catch (Throwable e) {
@@ -145,8 +146,8 @@ public class Config {
     /**
      * Get the static fields in a section.
      *
-     * @param clazz
-     * @return
+     * @param clazz config section
+     * @return map or string against object of static fields
      */
     public static Map<String, Object> getFields(Class<Enabled_Components> clazz) {
         HashMap<String, Object> map = new HashMap<>();
@@ -170,12 +171,11 @@ public class Config {
             }
             StringBuilder m = new StringBuilder();
             for (Object obj : listValue) {
-                m.append(System.lineSeparator() + spacing + "- " + toYamlString(obj, spacing));
+                m.append(System.lineSeparator()).append(spacing).append("- ").append(toYamlString(obj, spacing));
             }
             return m.toString();
         }
-        if (value instanceof String) {
-            String stringValue = (String) value;
+        if (value instanceof String stringValue) {
             if (stringValue.isEmpty()) {
                 return "''";
             }
@@ -184,7 +184,8 @@ public class Config {
         return value != null ? value.toString() : "null";
     }
 
-    private static void save(PrintWriter writer, Class clazz, Object instance, int indent) {
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    private static void save(PrintWriter writer, Class<?> clazz, Object instance, int indent) {
         try {
             String lineSeparator = System.lineSeparator();
             String spacing = StringMan.repeat(" ", indent);
@@ -204,16 +205,16 @@ public class Config {
                     if (value == null && field.getType() != ConfigBlock.class) {
                         setAccessible(field);
                         Class<?>[] classes = clazz.getDeclaredClasses();
-                        for (Class current : classes) {
+                        for (Class<?> current : classes) {
                             if (StringMan.isEqual(current.getSimpleName(), field.getName())) {
-                                field.set(instance, current.newInstance());
+                                field.set(instance, current.getDeclaredConstructor().newInstance());
                                 break;
                             }
                         }
                     }
                 } else {
                     writer.write(spacing + toNodeName(field.getName() + ": ") + toYamlString(
-                        field.get(instance), spacing) + lineSeparator);
+                            field.get(instance), spacing) + lineSeparator);
                 }
             }
             for (Class<?> current : clazz.getClasses()) {
@@ -233,46 +234,30 @@ public class Config {
                 BlockName blockNames = current.getAnnotation(BlockName.class);
                 if (blockNames != null) {
                     Field instanceField =
-                        clazz.getDeclaredField(toFieldName(current.getSimpleName()));
+                            clazz.getDeclaredField(toFieldName(current.getSimpleName()));
                     setAccessible(instanceField);
-                    ConfigBlock value = (ConfigBlock) instanceField.get(instance);
+                    ConfigBlock value = (ConfigBlock<?>) instanceField.get(instance);
                     if (value == null) {
                         value = new ConfigBlock();
                         instanceField.set(instance, value);
                         for (String blockName : blockNames.value()) {
-                            value.put(blockName, current.newInstance());
+                            value.put(blockName, current.getDeclaredConstructor().newInstance());
                         }
                     }
                     // Save each instance
                     for (Map.Entry<String, Object> entry : ((Map<String, Object>) value.getRaw())
-                        .entrySet()) {
+                            .entrySet()) {
                         String key = entry.getKey();
                         writer.write(spacing + "  " + toNodeName(key) + ":" + lineSeparator);
                         save(writer, current, entry.getValue(), indent + 4);
                     }
-                    continue;
                 } else {
-                    save(writer, current, current.newInstance(), indent + 2);
+                    save(writer, current, current.getDeclaredConstructor().newInstance(), indent + 2);
                 }
             }
         } catch (Throwable e) {
             e.printStackTrace();
         }
-    }
-
-    /**
-     * Get the field for a specific config node.
-     *
-     * @param split the node (split by period)
-     * @param root
-     * @return
-     */
-    private static Field getField(String[] split, Class<?> root) {
-        Object instance = getInstance(split, root);
-        if (instance == null) {
-            return null;
-        }
-        return getField(split, instance);
     }
 
     /**
@@ -288,10 +273,14 @@ public class Config {
             Field field = instance.getClass().getField(toFieldName(split[split.length - 1]));
             setAccessible(field);
             return field;
-        } catch (Throwable e) {
-            PlotSquared.debug(
-                "Invalid config field: " + StringMan.join(split, ".") + " for " + toNodeName(
-                    instance.getClass().getSimpleName()));
+        } catch (final Throwable e) {
+            LOGGER.error("Invalid config field: {} for {}. It's likely you are in the process of updating from an older major " +
+                            "release of PlotSquared. The entries named can be removed safely from the settings.yml. They are " +
+                            "likely no longer in use, moved to a different location or have been merged with other " +
+                            "configuration options. Check the changelog for more information.",
+                    StringMan.join(split, "."), toNodeName(instance.getClass().getSimpleName())
+            );
+            e.printStackTrace();
             return null;
         }
     }
@@ -303,10 +292,11 @@ public class Config {
      * @param root
      * @return The instance or null
      */
+    @SuppressWarnings({"unchecked", "rawtypes"})
     private static Object getInstance(String[] split, Class<?> root) {
         try {
             Class<?> clazz = root == null ? MethodHandles.lookup().lookupClass() : root;
-            Object instance = clazz.newInstance();
+            Object instance = clazz.getDeclaredConstructor().newInstance();
             while (split.length > 0) {
                 if (split.length == 1) {
                     return instance;
@@ -325,7 +315,7 @@ public class Config {
                     if (instanceField.getType() != ConfigBlock.class) {
                         Object value = instanceField.get(instance);
                         if (value == null) {
-                            value = found.newInstance();
+                            value = found.getDeclaredConstructor().newInstance();
                             instanceField.set(instance, value);
                         }
                         clazz = found;
@@ -333,14 +323,14 @@ public class Config {
                         split = Arrays.copyOfRange(split, 1, split.length);
                         continue;
                     }
-                    ConfigBlock value = (ConfigBlock) instanceField.get(instance);
+                    ConfigBlock value = (ConfigBlock<?>) instanceField.get(instance);
                     if (value == null) {
                         value = new ConfigBlock();
                         instanceField.set(instance, value);
                     }
                     instance = value.get(split[1]);
                     if (instance == null) {
-                        instance = found.newInstance();
+                        instance = found.getDeclaredConstructor().newInstance();
                         value.put(split[1], instance);
                     }
                     clazz = found;
@@ -351,7 +341,7 @@ public class Config {
                 if (found != null) {
                     split = Arrays.copyOfRange(split, 1, split.length);
                     clazz = found;
-                    instance = clazz.newInstance();
+                    instance = clazz.getDeclaredConstructor().newInstance();
                     continue;
                 }
                 return null;
@@ -397,6 +387,7 @@ public class Config {
     @Retention(RetentionPolicy.RUNTIME)
     @Target({ElementType.FIELD})
     public @interface Create {
+
     }
 
 
@@ -406,6 +397,7 @@ public class Config {
     @Retention(RetentionPolicy.RUNTIME)
     @Target({ElementType.FIELD})
     public @interface Final {
+
     }
 
 
@@ -415,7 +407,9 @@ public class Config {
     @Retention(RetentionPolicy.RUNTIME)
     @Target({ElementType.FIELD, ElementType.TYPE})
     public @interface Comment {
+
         String[] value();
+
     }
 
 
@@ -425,7 +419,9 @@ public class Config {
     @Retention(RetentionPolicy.RUNTIME)
     @Target({ElementType.FIELD, ElementType.TYPE})
     public @interface BlockName {
+
         String[] value();
+
     }
 
 
@@ -435,13 +431,14 @@ public class Config {
     @Retention(RetentionPolicy.RUNTIME)
     @Target({ElementType.FIELD, ElementType.TYPE})
     public @interface Ignore {
+
     }
 
 
     @Ignore // This is not part of the config
     public static class ConfigBlock<T> {
 
-        private HashMap<String, T> INSTANCES = new HashMap<>();
+        private final HashMap<String, T> INSTANCES = new HashMap<>();
 
         public T get(String key) {
             return INSTANCES.get(key);
@@ -462,5 +459,7 @@ public class Config {
         private Map<String, T> getRaw() {
             return INSTANCES;
         }
+
     }
+
 }
